Refactoring, automatic version info, color output, experimenting with Options and Parameters, added CMD wrapper